--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,6 +3,7 @@
 @import './_utils/mixins';
 
 body * {
+    font-family: 'M PLUS Rounded 1c';
     font-size: 1.2rem;
 
     @include mq(md) {
@@ -18,4 +19,17 @@ img {
     background: url(../img/bg_texture.png) 0 0 repeat;
     width: 100%;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    h1 {
+        margin-bottom: 30px;
+        font-size: 3rem;
+    }
+
+    p {
+        line-height: 2;
+    }
 }
